--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </a>
                 </div>
                 <div class="navbuttons">
-                    <a href="/">
+                    <a href="/account/logout">
                         <div class="navbutton">
                             <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
                             <svg
@@ -65,7 +65,7 @@
                     </div>
                     <div class="nav_entry_text">Dashboard</div>
                 </a>
-                <a class="nav_entry" href="/">
+                <a class="nav_entry" href="/search">
                     <div class="nav_entry_icon">
                         <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
                         <svg
@@ -86,7 +86,7 @@
                     <div class="nav_entry_text">Search</div>
                 </a>
                 <hr />
-                <a class="nav_entry" href="/">
+                <a class="nav_entry" href="/modules/people">
                     <div class="nav_entry_icon">
                         <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
                         <svg
