--- a/res/html/header.html
+++ b/res/html/header.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/res/css/header.css" />
 <header>
     <div class="container nav-container">
         <div class="logo">
@@ -5,6 +6,7 @@
                 <img src="/res/images/logo/nterslak.png" alt="" srcset="" />
             </a>
         </div>
+        <h1>Nterslak</h1>
         <div class="navbuttons">
             <a href="/account/logout">
                 <div class="navbutton">
