✨ Add noscript-hide class

--- a/res/html/head.html
+++ b/res/html/head.html
@@ -46,3 +46,10 @@
 <link rel="stylesheet" href="/res/css/grid.css" />
 <link rel="stylesheet" href="/res/css/nav.css" />
 <link rel="stylesheet" href="/res/css/header.css" />
+<noscript>
+    <style>
+        .noscript-hide {
+            display: none;
+        }
+    </style>
+</noscript>
