🐛 Add trailing slash (more info: gh-1)

--- a/res/html/nav.html
+++ b/res/html/nav.html
@@ -41,7 +41,7 @@
             <div class="nav_entry_text">Search</div>
         </a>
         <hr />
-        <a class="nav_entry" id="nav_entry_people" href="/modules/people">
+        <a class="nav_entry" id="nav_entry_people" href="/modules/people/">
             <div class="nav_entry_icon">
                 <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
                 <svg
@@ -61,7 +61,7 @@
             </div>
             <div class="nav_entry_text">People</div>
         </a>
-        <a class="nav_entry" id="nav_entry_maps" href="/modules/maps">
+        <a class="nav_entry" id="nav_entry_maps" href="/modules/maps/">
             <div class="nav_entry_icon">
                 <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
                 <svg
@@ -81,7 +81,7 @@
             </div>
             <div class="nav_entry_text">Maps</div>
         </a>
-        <a class="nav_entry" id="nav_entry_dates" href="/modules/dates">
+        <a class="nav_entry" id="nav_entry_dates" href="/modules/dates/">
             <div class="nav_entry_icon">
                 <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
                 <svg
@@ -104,7 +104,7 @@
         <a
             class="nav_entry"
             id="nav_entry_preferences"
-            href="/modules/preferences"
+            href="/modules/preferences/"
         >
             <div class="nav_entry_icon">
                 <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
@@ -125,7 +125,7 @@
             </div>
             <div class="nav_entry_text">Preferences</div>
         </a>
-        <a class="nav_entry" id="nav_entry_devices" href="/modules/devices">
+        <a class="nav_entry" id="nav_entry_devices" href="/modules/devices/">
             <div class="nav_entry_icon">
                 <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
                 <svg
@@ -145,7 +145,7 @@
             </div>
             <div class="nav_entry_text">Devices</div>
         </a>
-        <a class="nav_entry" id="nav_entry_accounts" href="/modules/accounts">
+        <a class="nav_entry" id="nav_entry_accounts" href="/modules/accounts/">
             <div class="nav_entry_icon">
                 <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
                 <svg
