🚸 Add noscript to map nav-button

--- a/res/html/nav.html
+++ b/res/html/nav.html
@@ -61,7 +61,11 @@
             </div>
             <div class="nav_entry_text">People</div>
         </a>
-        <a class="nav_entry" id="nav_entry_maps" href="/modules/maps/">
+        <a
+            class="nav_entry noscript-hide"
+            id="nav_entry_maps"
+            href="/modules/maps/"
+        >
             <div class="nav_entry_icon">
                 <!-- This icon is provided by Heroicons: https://heroicons.com/ -->
                 <svg
